<resources>
    <string name="app_name">My Application</string>
    <string name="fastfood_order_wizard">Fastfood Order Wizard</string>
    <string name="choose_main_meal">Choose Main Meal</string>
    <string name="choose_side_dishes">Choose Side Dishes</string>
    <string name="chooese_drink">Chooese Drink</string>
    <string name="current_selection">Current Selection:</string>
    <string name="main">Main:</string>
    <string name="sides">Sides:</string>
    <string name="drink">Drink:</string>
    <string name="order">Order</string>
    <string name="select_main_meal">Select Main Meal</string>
    <string name="burger">Burger</string>
    <string name="friedchicken">FriedChicken</string>
    <string name="chickennuggets">ChickenNuggets</string>
    <string name="done">Done</string>
    <string name="select_drink">Select Drink</string>
    <string name="cola">Cola</string>
    <string name="iced_tea">Iced Tea</string>
    <string name="water">Water</string>
    <string name="your_order_summary_will_appear_here">Your order summary will appear here.</string>
    <string name="confirm">Confirm</string>
    <string name="select_side_dishes_choose_at_least_one">Select Side Dishes (choose at least one)</string>
    <string name="fries">Fries</string>
    <string name="salad">Salad</string>
    <string name="corn_cup">Corn Cup</string>
</resources>