<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SideDishesActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_side_dishes_choose_at_least_one"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <CheckBox
        android:id="@+id/cbFries"
        android:text="@string/fries"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="8dp"/>

    <CheckBox
        android:id="@+id/cbSalad"
        android:text="@string/salad"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="8dp"/>

    <CheckBox
        android:id="@+id/cbCornCup"
        android:text="@string/corn_cup"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="8dp"/>

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/done" />

</LinearLayout>
