<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".DrinkActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_drink"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbCola"
            android:text="@string/cola"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="8dp"/>

        <RadioButton
            android:id="@+id/rbIcedTea"
            android:text="@string/iced_tea"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="8dp"/>

        <RadioButton
            android:id="@+id/rbWater"
            android:text="@string/water"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="8dp"/>

    </RadioGroup>

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/done" />

</LinearLayout>
